--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,20 +3,19 @@ services:
   web:
     build:
       context: .
-      target: http-server
     ports:
       - "3000:3000"
-    depends_on:
-      - mongo
-  socket:
-    build:
-      context: .
-      target: socket-server
-    ports:
-      - "5000:5000"
+    networks:
+      - my_network
     depends_on:
       - mongo
   mongo:
     image: mongo
     ports:
       - "27018:27017"
+    networks:
+    - my_network
+
+networks:
+  my_network:
+    driver: bridge
